# AUV

./: CMakeLists.txt  README.md  SETUP_INSTRUCTIONS.md  install_scripts.sh  package.xml  setup.py
action/: MotionControl.action
auv_control/: __init__.py  motion_action_client.py  motion_action_server.py
auv_control/utils/: __init__.py  mavlink_helper.py
config/: motion_control_params.yaml
launch/: motion_client.launch.py  motion_server.launch.py  motion_system.launch.py
msg/: VehicleState.msg
